modifty python_2.ipynb

--- a/python_2.ipynb
+++ b/python_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "bdf66347",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "d5e94e02",
    "metadata": {},
    "outputs": [],
@@ -63,12 +63,14 @@
     "# 'cpi' 列のみを抽出\n",
     "cpi2016 = filtered_dataCPI['cpi']\n",
     "\n",
-    "cpi2016 = cpi2016.astype(float)\n",
-    "data['cpi'] = data['cpi'].astype(float)\n",
+    "cpi2016 = cpi2016.astype('float64')\n",
+    "data['cpi'] = data['cpi'].astype('float64')\n",
+    "data['price'] = data['price'].astype('float64')\n",
     "\n",
     "# 'price' 列を 'cpi' 列と 'cpi2016' 列を用いて変換\n",
-    "# data['cpi']/cpi2016が全てNaNとなり、解決できなかったためコメントアウト。\n",
-    "#data['price'] = data['price'] / (data['cpi'] / cpi2016) \n",
+    "# data['cpi']/cpi2016が全てNaNとなり、解決できなかったためコメントアウト。 \n",
+    "# 2023/9/16追記：float64に変換することで成功。\n",
+    "data['price'] = data['price'] / (data['cpi'] / cpi2016) \n",
     "\n",
     "# 'price' 列を100で割る\n",
     "data['price'] = data['price'] / 100\n",
@@ -901,7 +903,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
