--- a/python_3.ipynb
+++ b/python_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "28c408d2",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "c0be12b5",
    "metadata": {
     "scrolled": false
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "624c50a8",
    "metadata": {},
    "outputs": [],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "d7a9a171",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "ca975e3f",
    "metadata": {},
    "outputs": [],
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "id": "13c57f60",
    "metadata": {},
    "outputs": [],
@@ -318,8 +318,333 @@
     "NameID = dt2016['NameID']\n",
     "\n",
     "# 自己弾力性\n",
-    "own_elas = "
+    "own_elas = iv_GH.params['price']*price*(1-share)\n",
+    "# 交差弾力性\n",
+    "cross_elas = (-1)*iv_GH.params['price']*price*share\n",
+    "# 価格弾力性行列を作成する\n",
+    "# J = len(own_elas)\n",
+    "# elas_mat = np.tile(cross_elas, (J, 1))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ランダム係数ロジットモデルの定式化\n",
+    "効用を以下のように考える。\n",
+    "$$ u_{ijt} = \\left\\{\n",
+    "\\begin{array}{ll}\n",
+    "-\\alpha_i p_{jt} + \\beta_i' x_{jt} + \\xi_{jt} + \\epsilon_{ijt} & j = 1, \\cdots, J_t \\\\\n",
+    "\\epsilon_{i0t} & j = 0\n",
+    "\\end{array}\n",
+    "\\right. $$\n",
+    "\n",
+    "ここで、\n",
+    "- $x_{jt} = (1, x_{jt}^1, \\cdots, x_{jt}^K)'$：定数項とK個の製品属性を含む$(K+1)\\times 1$のベクトル。\n",
+    "- $\\beta_i = (\\beta_i^0, \\cdots, \\beta_i^K)$：$x_{jt}$に対応する$(K+1)\\times 1$係数ベクトル。\n",
+    "\n",
+    "ランダム係数ロジットモデルでは、価格や製品属性に対する選好$(\\alpha_i, \\beta_i)$が個人ごとに異なることを許容している。また、個人の選好は以下の二つの要素に分解できる。\n",
+    "\n",
+    "- 個人に関して観察される要因を社会経済属性（所得、年齢、世帯サイズなど）\n",
+    "- 観察されないような要因である、選考の異質性\n",
+    "\n",
+    "これを定式化すると以下の通り。\n",
+    "\n",
+    "$$\n",
+    "\\begin{pmatrix}\\alpha_i \\\\ \\beta_i \\end{pmatrix} = \\begin{pmatrix}\\alpha \\\\ \\beta \\end{pmatrix} + \\Pi D_i + \\sum v_i, \\quad D_i\\sim F_t(D),\\quad v_i\\sim G(v)\n",
+    "$$\n",
+    "\n",
+    "ここで、\n",
+    "- $\\begin{pmatrix}\\alpha \\\\ \\beta \\end{pmatrix}$：個人ごとに共通な価格、製品属性への選好を捉えている。\n",
+    "- $D_i$：消費者$i$の社会経済属性の$d\\times 1$ベクトル。\n",
+    "- $\\Pi$：選好パラメータが各消費者の社会経済属性にどのように依存するかを捉える、$(K+2)\\times d$行列。\n",
+    "- $v_i$：観察されない選好の異質性を捉える、$(K+2)\\times 1$ベクトル。\n",
+    "- $\\sum$：$v_i$の分散共分散行列。$(K+2)\\times(K+2)$行列。\n",
+    "\n",
+    "- 消費者に関するミクロデータが利用可能であれば、$D_i$の分布を考える必要はないが、市場レベルのデータのみの場合、社会経済属性の分布$F_t(D)$のみが利用可能である。\n",
+    "- 観察されない選好の異質性の分布$G(v)$はその定義から観察されることはないので、分析者が何らかの分布を仮定する。\n",
+    "\n",
+    "\n",
+    "## 個人の選択確率及びマーケットシェアの導出\n",
+    "\n",
+    "### 個人の選択確率\n",
+    "ランダム係数ロジットモデルを以下のように書き換える。\n",
+    "\n",
+    "$$\n",
+    "u_{ijt} = \\underbrace{\\delta_{jt}(\\theta_1)}_{\\text{消費者間で共通の平均効用}} + \\underbrace{\\mu_{ijt}(\\theta_2)}_{\\text{消費者の選好の異質性に依存する効用部分}} + \\epsilon_{ijt}\n",
+    "$$\n",
+    "\n",
+    "ここで、\n",
+    "- $\\theta_1 = (\\alpha, \\beta),\\quad \\theta_2 = (\\Pi, \\sum)$。$\\theta_1$を線形パラメター、$\\theta_2$を非線形パラメターという。\n",
+    "- $\\delta_{jt}(\\theta_1) = -\\alpha p_{jt} + \\beta'x_{jt} + \\xi_{jt}$：消費者間で共通の平均効用。\n",
+    "- $\\mu_{ijt}(\\theta_2) = [\\Pi D_i + \\sum v_i]'\\begin{bmatrix}p_{jt} \\\\ x_{jt}\\end{bmatrix}$：消費者の選好の異質性に依存する効用部分。$\\begin{bmatrix}p_{jt} \\\\ x_{jt}\\end{bmatrix}$が$(K+2)\\times 1$で、$\\Pi D_i + \\sum v_i$も$(K+2)\\times 1$なので、$\\mu_{ijt}(\\theta_2)$はスカラー。\n",
+    "\n",
+    "例えば、自動車需要推定におけるランダム係数ロジットモデルとして以下のような効用のモデルを考える。（社会経済属性を用いないモデルの例）\n",
+    "\n",
+    "$$\n",
+    "\\tag{1}\n",
+    "u_{ijt} = \\beta_i^0 + \\beta_i^{size}size_{jt} + \\beta^{fuelefficiency}fuelefficiency_{jt} + \\beta^{hppw}hppw_{jt}-\\alpha_i p_{jt} + \\xi_{jt} + \\epsilon_{ijt}\n",
+    "$$\n",
+    "\n",
+    "- サイズ、価格、定数項について各個人ごとに異なるランダム係数としている。\n",
+    "- 定数項の解釈として、「何かしらの自動車を購入すること」からの効用を捉えているため、「outside goods」からの効用を捉えている。\n",
+    "- 3つのランダム係数について、それぞれ互いに独立な正規分布に従うと仮定する。すなわち、\n",
+    "$$ \n",
+    "\\beta_i^0 \\sim N(\\beta^0, (\\sigma^0)^2), \\quad \\beta_i^{size} \\sim N(\\beta^{size}, (\\sigma^{size})^2), \\quad \\alpha_i^0 \\sim N(\\alpha, (\\sigma^{\\alpha})^2)\n",
+    "$$\n",
+    "\n",
+    "この時、線形パラメターと非線形パラメターはそれぞれ以下の通り。\n",
+    "- $\\theta_1 = (\\beta^0, \\beta^{size}, \\beta^{fuelefficiency}, \\beta^{hppw}, \\alpha)$\n",
+    "- $\\theta_2 = (\\sigma^0, \\sigma^{size}, \\sigma^{\\alpha})$：i.e., ランダム係数が従う分布の標準偏差パラメター。\n",
+    "\n",
+    "\n",
+    "「個人属性」を$(D_i,v_i)$とする。個人属性で条件づけ、outside goodsからの効用を0に基準化すると、個人の選択確率は以下の通り。\n",
+    "\n",
+    "$$\n",
+    "s_{ijt}(D_i,v_i) = \\frac{\\exp(\\delta_{jt}(\\theta_1) + \\mu_{ijt}(\\theta_2))}{1+\\sum_{j=1}^{J_t}\\exp(\\delta_{jt}(\\theta_1) + \\mu_{ijt}(\\theta_2))}\n",
+    "$$\n",
+    "\n",
+    "この個人の選択確率$s_{ijt}(D_i,v_i)$をすべての個人について足し合わせればマーケットシェアになる。この足し上げは個人属性$(D_i,v_i)$の分布に関する積分より行う。\n",
+    "\n",
+    "ある製品$j$のマーケット$t$におけるマーケットシェア$s_{jt}$は以下の通り。\n",
+    "\n",
+    "$$\n",
+    "s_{jt} = \\int\\int s_{ijt}(D_i,v_i)dF_t(D_i)dG(v_i) \\equiv S_{jt}\\left(\\{\\delta_{jt}\\}_{j=1}^{J_t}; \\theta_2\\right)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9d674370",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>price</th>\n",
+       "      <th>hppw</th>\n",
+       "      <th>FuelEfficiency</th>\n",
+       "      <th>size</th>\n",
+       "      <th>year</th>\n",
+       "      <th>NameID</th>\n",
+       "      <th>share</th>\n",
+       "      <th>log_sales</th>\n",
+       "      <th>log_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>56487</td>\n",
+       "      <td>0.756</td>\n",
+       "      <td>0.081690</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>7.361209</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>105</td>\n",
+       "      <td>0.001105</td>\n",
+       "      <td>10.941766</td>\n",
+       "      <td>-0.279714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>28102</td>\n",
+       "      <td>0.900</td>\n",
+       "      <td>0.063415</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>8.112353</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>136</td>\n",
+       "      <td>0.000550</td>\n",
+       "      <td>10.243596</td>\n",
+       "      <td>-0.105361</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>71897</td>\n",
+       "      <td>1.099</td>\n",
+       "      <td>0.059091</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>8.187467</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>168</td>\n",
+       "      <td>0.001407</td>\n",
+       "      <td>11.182990</td>\n",
+       "      <td>0.094401</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>9143</td>\n",
+       "      <td>5.220</td>\n",
+       "      <td>0.192073</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>12.526605</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>36</td>\n",
+       "      <td>0.000179</td>\n",
+       "      <td>9.120744</td>\n",
+       "      <td>1.652497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>28419</td>\n",
+       "      <td>2.380</td>\n",
+       "      <td>0.094767</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>15.149835</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0.000556</td>\n",
+       "      <td>10.254813</td>\n",
+       "      <td>0.867100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1790</th>\n",
+       "      <td>4900</td>\n",
+       "      <td>3.208</td>\n",
+       "      <td>0.103896</td>\n",
+       "      <td>23.4</td>\n",
+       "      <td>13.011337</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>114</td>\n",
+       "      <td>0.000086</td>\n",
+       "      <td>8.496990</td>\n",
+       "      <td>1.165648</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1798</th>\n",
+       "      <td>248258</td>\n",
+       "      <td>2.429</td>\n",
+       "      <td>0.074809</td>\n",
+       "      <td>40.8</td>\n",
+       "      <td>11.745888</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>216</td>\n",
+       "      <td>0.004359</td>\n",
+       "      <td>12.422224</td>\n",
+       "      <td>0.887480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1813</th>\n",
+       "      <td>17026</td>\n",
+       "      <td>1.778</td>\n",
+       "      <td>0.093966</td>\n",
+       "      <td>22.2</td>\n",
+       "      <td>11.443877</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>227</td>\n",
+       "      <td>0.000299</td>\n",
+       "      <td>9.742497</td>\n",
+       "      <td>0.575489</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1820</th>\n",
+       "      <td>10903</td>\n",
+       "      <td>1.999</td>\n",
+       "      <td>0.079646</td>\n",
+       "      <td>22.2</td>\n",
+       "      <td>9.828100</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>228</td>\n",
+       "      <td>0.000191</td>\n",
+       "      <td>9.296793</td>\n",
+       "      <td>0.692647</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1822</th>\n",
+       "      <td>5447</td>\n",
+       "      <td>4.540</td>\n",
+       "      <td>0.092683</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>12.656331</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.000096</td>\n",
+       "      <td>8.602820</td>\n",
+       "      <td>1.512927</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>204 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Sales  price      hppw  FuelEfficiency       size  year  NameID  \\\n",
+       "7      56487  0.756  0.081690            21.0   7.361209  2006     105   \n",
+       "18     28102  0.900  0.063415            19.0   8.112353  2006     136   \n",
+       "19     71897  1.099  0.059091            19.0   8.187467  2006     168   \n",
+       "39      9143  5.220  0.192073            10.0  12.526605  2006      36   \n",
+       "49     28419  2.380  0.094767            12.2  15.149835  2006      46   \n",
+       "...      ...    ...       ...             ...        ...   ...     ...   \n",
+       "1790    4900  3.208  0.103896            23.4  13.011337  2016     114   \n",
+       "1798  248258  2.429  0.074809            40.8  11.745888  2016     216   \n",
+       "1813   17026  1.778  0.093966            22.2  11.443877  2016     227   \n",
+       "1820   10903  1.999  0.079646            22.2   9.828100  2016     228   \n",
+       "1822    5447  4.540  0.092683            16.5  12.656331  2016      11   \n",
+       "\n",
+       "         share  log_sales  log_price  \n",
+       "7     0.001105  10.941766  -0.279714  \n",
+       "18    0.000550  10.243596  -0.105361  \n",
+       "19    0.001407  11.182990   0.094401  \n",
+       "39    0.000179   9.120744   1.652497  \n",
+       "49    0.000556  10.254813   0.867100  \n",
+       "...        ...        ...        ...  \n",
+       "1790  0.000086   8.496990   1.165648  \n",
+       "1798  0.004359  12.422224   0.887480  \n",
+       "1813  0.000299   9.742497   0.575489  \n",
+       "1820  0.000191   9.296793   0.692647  \n",
+       "1822  0.000096   8.602820   1.512927  \n",
+       "\n",
+       "[204 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Markdownでの(1)式を推定することを考える。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "068cad14",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
