--- a/python_3.ipynb
+++ b/python_3.ipynb
@@ -410,239 +410,77 @@
     "\n",
     "$$\n",
     "s_{jt} = \\int\\int s_{ijt}(D_i,v_i)dF_t(D_i)dG(v_i) \\equiv S_{jt}\\left(\\{\\delta_{jt}\\}_{j=1}^{J_t}; \\theta_2\\right)\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "9d674370",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Sales</th>\n",
-       "      <th>price</th>\n",
-       "      <th>hppw</th>\n",
-       "      <th>FuelEfficiency</th>\n",
-       "      <th>size</th>\n",
-       "      <th>year</th>\n",
-       "      <th>NameID</th>\n",
-       "      <th>share</th>\n",
-       "      <th>log_sales</th>\n",
-       "      <th>log_price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>56487</td>\n",
-       "      <td>0.756</td>\n",
-       "      <td>0.081690</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>7.361209</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>105</td>\n",
-       "      <td>0.001105</td>\n",
-       "      <td>10.941766</td>\n",
-       "      <td>-0.279714</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>28102</td>\n",
-       "      <td>0.900</td>\n",
-       "      <td>0.063415</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>8.112353</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>136</td>\n",
-       "      <td>0.000550</td>\n",
-       "      <td>10.243596</td>\n",
-       "      <td>-0.105361</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>71897</td>\n",
-       "      <td>1.099</td>\n",
-       "      <td>0.059091</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>8.187467</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>168</td>\n",
-       "      <td>0.001407</td>\n",
-       "      <td>11.182990</td>\n",
-       "      <td>0.094401</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>9143</td>\n",
-       "      <td>5.220</td>\n",
-       "      <td>0.192073</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>12.526605</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>36</td>\n",
-       "      <td>0.000179</td>\n",
-       "      <td>9.120744</td>\n",
-       "      <td>1.652497</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>28419</td>\n",
-       "      <td>2.380</td>\n",
-       "      <td>0.094767</td>\n",
-       "      <td>12.2</td>\n",
-       "      <td>15.149835</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>46</td>\n",
-       "      <td>0.000556</td>\n",
-       "      <td>10.254813</td>\n",
-       "      <td>0.867100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1790</th>\n",
-       "      <td>4900</td>\n",
-       "      <td>3.208</td>\n",
-       "      <td>0.103896</td>\n",
-       "      <td>23.4</td>\n",
-       "      <td>13.011337</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>114</td>\n",
-       "      <td>0.000086</td>\n",
-       "      <td>8.496990</td>\n",
-       "      <td>1.165648</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1798</th>\n",
-       "      <td>248258</td>\n",
-       "      <td>2.429</td>\n",
-       "      <td>0.074809</td>\n",
-       "      <td>40.8</td>\n",
-       "      <td>11.745888</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>216</td>\n",
-       "      <td>0.004359</td>\n",
-       "      <td>12.422224</td>\n",
-       "      <td>0.887480</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1813</th>\n",
-       "      <td>17026</td>\n",
-       "      <td>1.778</td>\n",
-       "      <td>0.093966</td>\n",
-       "      <td>22.2</td>\n",
-       "      <td>11.443877</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>227</td>\n",
-       "      <td>0.000299</td>\n",
-       "      <td>9.742497</td>\n",
-       "      <td>0.575489</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1820</th>\n",
-       "      <td>10903</td>\n",
-       "      <td>1.999</td>\n",
-       "      <td>0.079646</td>\n",
-       "      <td>22.2</td>\n",
-       "      <td>9.828100</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>228</td>\n",
-       "      <td>0.000191</td>\n",
-       "      <td>9.296793</td>\n",
-       "      <td>0.692647</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1822</th>\n",
-       "      <td>5447</td>\n",
-       "      <td>4.540</td>\n",
-       "      <td>0.092683</td>\n",
-       "      <td>16.5</td>\n",
-       "      <td>12.656331</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0.000096</td>\n",
-       "      <td>8.602820</td>\n",
-       "      <td>1.512927</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>204 rows × 10 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Sales  price      hppw  FuelEfficiency       size  year  NameID  \\\n",
-       "7      56487  0.756  0.081690            21.0   7.361209  2006     105   \n",
-       "18     28102  0.900  0.063415            19.0   8.112353  2006     136   \n",
-       "19     71897  1.099  0.059091            19.0   8.187467  2006     168   \n",
-       "39      9143  5.220  0.192073            10.0  12.526605  2006      36   \n",
-       "49     28419  2.380  0.094767            12.2  15.149835  2006      46   \n",
-       "...      ...    ...       ...             ...        ...   ...     ...   \n",
-       "1790    4900  3.208  0.103896            23.4  13.011337  2016     114   \n",
-       "1798  248258  2.429  0.074809            40.8  11.745888  2016     216   \n",
-       "1813   17026  1.778  0.093966            22.2  11.443877  2016     227   \n",
-       "1820   10903  1.999  0.079646            22.2   9.828100  2016     228   \n",
-       "1822    5447  4.540  0.092683            16.5  12.656331  2016      11   \n",
-       "\n",
-       "         share  log_sales  log_price  \n",
-       "7     0.001105  10.941766  -0.279714  \n",
-       "18    0.000550  10.243596  -0.105361  \n",
-       "19    0.001407  11.182990   0.094401  \n",
-       "39    0.000179   9.120744   1.652497  \n",
-       "49    0.000556  10.254813   0.867100  \n",
-       "...        ...        ...        ...  \n",
-       "1790  0.000086   8.496990   1.165648  \n",
-       "1798  0.004359  12.422224   0.887480  \n",
-       "1813  0.000299   9.742497   0.575489  \n",
-       "1820  0.000191   9.296793   0.692647  \n",
-       "1822  0.000096   8.602820   1.512927  \n",
-       "\n",
-       "[204 rows x 10 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Markdownでの(1)式を推定することを考える。"
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "068cad14",
+   "id": "affe88dc",
+   "metadata": {},
+   "source": [
+    "# BLPの推定アルゴリズム\n",
+    "非線形パラメター$\\theta_2$を所与とすると、マーケットシェアは以下の通り。\n",
+    "$$\n",
+    "s_{jt} = S_{jt}\\left(\\{\\delta_{jt}\\}_{j=1}^{J_t}; \\theta_2\\right)\n",
+    "$$\n",
+    "\n",
+    "- 左辺はデータから観察することができる。\n",
+    "- 右辺は平均効用$\\{\\delta_{jt}\\}_{j=1}^{J_t}$の関数\n",
+    "- 平均効用は $\\delta_{jt} = \\alpha p_{jt}+\\beta' x_{jt} + \\xi_{jt}$\n",
+    "- データにおけるマーケットシェアのベクトル$\\{s_{jt}\\}_{j=1}^{J_t}$とモデルの予測が一致するような平均効用ベクトル$\\{\\delta_{jt}\\}_{j=1}^{J_t}$が存在する。\n",
+    "- 誤差項$\\xi_{jt}$を、$\\xi_{jt} = S_{jt}^{-1}\\left(\\{s_{jt}\\}_{j=1}^{J_t}; \\theta_2\\right)-(\\alpha p_{jt}+\\beta' x_{jt})$と計算できる。\n",
+    "\n",
+    "## 手順1\n",
+    "非線形パラメター$\\theta_2$を所与とし、Berryのインバージョンによる平均効用ベクトル$\\{\\delta_{jt}\\}_{j=1}^{J_t}$を計算する。\n",
+    "$$\n",
+    "s_{jt} = S_{jt}\\left(\\{\\delta_{jt}\\}_{j=1}^{J_t}; \\theta_2\\right)\\quad \\forall j\n",
+    "$$\n",
+    "この積分を解析的に解くことはできないので、モンテカルロシミュレーションで数値計算する。\n",
+    "\n",
+    "ある製品$j$のマーケット$t$におけるマーケットシェア$s_{jt}$は以下の通りだった。この積分を数値計算する。\n",
+    "\n",
+    "$$\n",
+    "s_{jt} = \\int\\int s_{ijt}(D_i,v_i)dF_t(D_i)dG(v_i) \\equiv S_{jt}\\left(\\{\\delta_{jt}\\}_{j=1}^{J_t}; \\theta_2\\right)\n",
+    "$$\n",
+    "\n",
+    "- 分布$G(v_i)$から乱数$v^r$を生成。\n",
+    "- 社会経済属性の分布$F_t(D_i)$から乱数$D^r$を生成。\n",
+    "\n",
+    "これらは分布からランダムに消費者を抽出している（消費者をシミュレート）と解釈される。これより、生成された選好パラメターをもった各消費者について選択確率が計算可能。\n",
+    "\n",
+    "この手順をR人分繰り返し、その選択確率の平均をとったものがマーケットシェアとなる。すなわち、以下を計算する。\n",
+    "\n",
+    "$$\n",
+    "S_{jt}\\left(\\{\\delta_{jt}\\}_{j=1}^{J_t}; \\theta_2\\right) = \\frac{1}{R}\\sum_{r=1}^R \\frac{\\exp(\\delta_{jt}+\\mu_{ijt}(v^r,D^r;\\theta_2))}{1+\\sum_{j=1}^{J_t}\\exp(\\delta_{jt}+\\mu_{ijt}(v^r,D^r;\\theta_2))}\n",
+    "$$\n",
+    "\n",
+    "Rを十分大きく取ることで、大数の法則からシミュレーションしたマーケットシェアの値は元の積分での計算した結果に確率収束する。\n",
+    "\n",
+    "## 手順2\n",
+    "手順1で$\\theta_2$を所与として平均効用のインバージョンから得られた$\\{\\delta_{jt}\\}_{j=1}^{J_t}$より、誤差項$\\xi_{jt}$を以下の通り得る。ここでは、$\\theta_1$の中身を分解している。\n",
+    "\n",
+    "$$\n",
+    "\\xi_{jt}(\\theta_1,\\theta_2) = \\delta_{jt}(\\theta_2) + \\alpha p_{jt}-\\beta'x_{jt}\n",
+    "$$\n",
+    "\n",
+    "- 線形パラメター$\\theta_1$は、非線形パラメター$\\theta_2$を所与としてインバージョンから得られた$\\delta_{jt}(\\theta_2)$を「被説明変数」として扱う線形GMMから解析的に値を計算することができる。\n",
+    "- 線形GMMから得られた$\\theta_1$を用いることでGMM目的関数を計算できる。そのため、数値最適化のために推定する必要のあるパラメターは非線形パラメターのみとなる。\n",
+    "\n",
+    "モーメント条件から以下のGMM目的関数を得る。\n",
+    "\n",
+    "$$\n",
+    "G(\\theta) = \\xi(\\theta)'ZWZ'\\xi(\\theta)\n",
+    "$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40ffa172",
    "metadata": {},
    "source": []
   }
